modified styles.css and index.html to center button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div>
         <h1>Random Quote Generator</h1>
         <p id="quote" class="fw-bold text-secondary">Ameyatimba By Whozu</p>
-        <button onclick="generateQoute()" class="btn btn-outline-primary">Generate Qoute</button>
+        <div class="container">
+          <button onclick="generateQoute()" class="btn btn-outline-primary">Generate Qoute</button>
+        </div>
     </div>
     <script src="/script/app.js">
     </script>
